# cudaNet

src/: CMakeLists.txt  netTest.cpp
src/math/: CMakeLists.txt  math.h
src/math/linearAlgebra/: CMakeLists.txt  vector.cu  vector.h
